unpackaged/main/default/objects/Agent__c/fields/Agent_Status__c.field-meta.xml
<CustomField>
    <fullName>Agent_Status__c</fullName>
    <label>Agent Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>