unpackaged/main/default/objects/Agent__c/fields/Allowed_Discount__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Discount__c</fullName>
    <label>Allowed % Discount</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>