unpackaged/main/default/objects/Agent__c/fields/Allowed_USD_Discount__c.field-meta.xml
<CustomField>
    <fullName>Allowed_USD_Discount__c</fullName>
    <label>Allowed USD Discount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>