unpackaged/main/default/objects/Agent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Agent_Status__c</columns>
    <columns>Email__c</columns>
    <columns>Password__c</columns>
    <columns>Allowed_Discount__c</columns>
    <columns>Allowed_USD_Discount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>